# Robo-ARM

./: .gitignore  CMakeLists.txt  README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: examples.h  main.c  obstacles.h  utils.h
app/src/pathfinding/: common.h  pathfinding.c  pathfinding.h  spaces.c  spaces.h
app/src/pathfinding/graph/: graph.c  graph.h
app/src/threads/: arm_ctrl.c  arm_ctrl.h  control.c  control.h
app/src/utils/: utils.c  utils.h
docs/: BOM.md  arhitecture.md
drivers/: CMakeLists.txt
drivers/servo/: CMakeLists.txt  Kconfig
drivers/servo/mg996r/: CMakeLists.txt  Kconfig  mg996r.c
dts/bindings/servo/: mg996r-servo.yaml
hardware/3D-print/: README.md  RoboARM-STL.tar  RoboARM.stl
include/app/drivers/: mg996r.h
include/lib/: common.h  map_utils.h
include/lib/pathfind/: pathfinding.h  spaces.h
include/lib/pathfind/graph/: graph.h
lib/: CMakeLists.txt  Kconfig
lib/map_utils/: CMakeLists.txt  Kconfig  map_utils.c
lib/pathfind/: CMakeLists.txt  Kconfig  pathfinding.c  spaces.c
lib/pathfind/graph/: graph.c
scripts/: generate_plots.py  west-commands.yml  west_pathfind.py
tests/lib/map_utils/: CMakeLists.txt  prj.conf
tests/lib/map_utils/src/: main.c
tests/pathfind/: CMakeLists.txt  prj.conf
tests/pathfind/src/: main.c  utils.h
tests/servo/: CMakeLists.txt  prj.conf
tests/servo/boards/: nrf52840dk_nrf52840.overlay
tests/servo/src/: main.c
